--- a/css/app.css
+++ b/css/app.css
@@ -4,3 +4,59 @@
     width: 100%; 
     height: 500px
 }
+
+.osudental-app {
+    margin-top:10px;
+}
+
+.navbar .brand {
+    font-style:italic;
+    color:#900;
+}
+
+.nuwu-editable-preview {
+    line-height:30px;
+    margin-bottom:10px;
+}
+
+.form-signin {
+    max-width: 300px;
+    padding: 0px 29px 29px;
+    margin: 20px auto 20px;
+    background-color: #fff;
+    border: 1px solid #e5e5e5;
+    -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+            border-radius: 5px;
+    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+        -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+            box-shadow: 0 1px 2px rgba(0,0,0,.05);
+}
+.form-signin-heading {
+    color:#900;
+    font-size:1.5rem;
+    font-style:italic;
+    font-weight:bold;
+    line-height:2;
+}
+.form-signin .input-label {
+    position:relative;
+    top:-15px;
+    padding-right:5px;
+}
+.form-signin label {
+    display:inline;
+}
+.form-signin input[type="text"],
+.form-signin input[type="password"] {
+    font-size: 16px;
+    height: auto;
+    padding: 7px 9px;
+}
+.form-signin input[type="checkbox"] {
+    margin:5px 5px 8px;
+}
+.form-signin input[type="submit"] {
+    margin:5px 5px 8px;
+}
+
